--- a/css/typography.css
+++ b/css/typography.css
@@ -1,2 +1,9 @@
 /*font-family: 'Nunito', sans-serif;
 font-family: 'Georgia', serif; */
+
+#header{
+font-family: 'Georgia', serif;
+}
+#main{
+font-family: 'Nunito', sans-serif;
+}
