--- a/css/typography.css
+++ b/css/typography.css
@@ -3,6 +3,7 @@ font-family: 'Georgia', serif; */
 
 #header{
 font-family: 'Georgia', serif;
+font-weight: bold;
 }
 #main{
 font-family: 'Nunito', sans-serif;
