--- a/css/typography.css
+++ b/css/typography.css
@@ -1,7 +1,7 @@
 /*font-family: 'Nunito', sans-serif;
 font-family: 'Georgia', serif; */
 
-#header{
+.header{
 font-family: 'Georgia', serif;
 font-weight: bold;
 text-transform: uppercase;
