--- a/css/typography.css
+++ b/css/typography.css
@@ -5,8 +5,9 @@ font-family: 'Georgia', serif; */
 font-family: 'Georgia', serif;
 font-weight: bold;
 text-transform: uppercase;
-width: 20%;
-height: auto;  
+width: 25%;
+height: auto;
+line-height: 10%;   
 }
 #main{
 font-family: 'Nunito', sans-serif;
