--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,12 @@
 */
 body {margin: 0;}
 
+.wrapper {
+max-width: 80%;
+    margin: 0 auto;
+    padding: 15px 0;
+}
+
 .logo {
   width: 20%;
   height: auto;
