--- a/css/typography.css
+++ b/css/typography.css
@@ -10,7 +10,7 @@ height: auto;
 line-height: 10%;   
 }
 
-.navtext{
+nav {
 font-family: 'Nunito', sans-serif;
 font-weight: bold;
 text-transform: uppercase;
