--- a/css/main.css
+++ b/css/main.css
@@ -40,9 +40,9 @@ ul.topnav li a {
   text-decoration: none;
 }
 
-ul.topnav li a:hover:not(.active) {background-color: #111;}
+ul.topnav li a:hover:not(.active) {background-color: #585858;}
 
-ul.topnav li a.active {background-color: #4CAF50;}
+ul.topnav li a.active {background-color: #003049;}
 
 ul.topnav li.right {float: right;}
 
