--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ ul.topnav li a {
   text-decoration: none;
 }
 
-ul.topnav li a:hover:not(.active) {background-color: #003049;}
+ul.topnav li a:hover:not(.active) {background-color: #F57F20 ;}
 
 ul.topnav li a.active {background-color: #003049;}
 
