--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ ul.topnav li a {
 
 ul.topnav li a:hover:not(.active) {background-color:#003049 ;}
 
-ul.topnav li a.active {background-color: #F57F20 ;}
+ul.topnav li a.active {background-color: #DE741D;}
 
 ul.topnav li.right {float: right;}
 
