--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,10 @@ line-height: 1em;
   height: auto;
 }
 
-
+.photo{
+    width: 40%;
+    height: auto;
+}
 
 ul.topnav {
   list-style-type: none;
