--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,13 @@ ul.topnav li a.active {background-color: #DE741D;}
 
 ul.topnav li.right {float: right;}
 
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+}
+
+
 @media screen and (max-width: 600px) {
   ul.topnav li.right, 
   ul.topnav li {float: none;}
