--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,14 @@ ul.topnav li.right {float: right;}
   flex-direction: row;
 }
 
+.flex-item-left {
+  flex: 50%;
+}
+
+.flex-item-right {
+  flex: 50%;
+}
+
 
 @media screen and (max-width: 600px) {
   ul.topnav li.right, 
