--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ line-height: 1em;
 }
 
 #photo {
-    width: 10%;
+    width: 5%;
     height: auto;
 }
 
@@ -62,6 +62,7 @@ ul.topnav li.right {float: right;}
 .flex-item-right {
   flex: 40%;
  padding:1px;
+   background-color: #751816;   
 
 }
 
