--- a/css/main.css
+++ b/css/main.css
@@ -56,12 +56,12 @@ ul.topnav li.right {float: right;}
 }
 
 .flex-item-left {
-  flex: 40%;
+  flex: 50%;
 }
 
 .flex-item-right {
-  flex: 40%;
- padding:1px;
+  flex: 50%;
+ padding:5px;
    background-color: #751816;   
 
 }
@@ -75,3 +75,4 @@ ul.topnav li.right {float: right;}
  .flex-container {
     flex-direction: column;
   }
+}
