--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ ul.topnav li.right {float: right;}
    background-color: #751816;   
 
 }
-
+}
 
 @media screen and (max-width: 600px) {
   ul.topnav li.right, 
