--- a/css/main.css
+++ b/css/main.css
@@ -66,11 +66,10 @@ ul.topnav li.right {float: right;}
 
 
 }
-
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
   ul.topnav li.right, 
   ul.topnav li {float: none;}
-}
+
 
  .flex-container {
     flex-direction: column;
