--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ ul.topnav li.right {float: right;}
 @media (max-width: 600px) {
   ul.topnav li.right, 
   ul.topnav li {float: none;}
-
+}
 
  .flex-container {
     flex-direction: column;
