--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ line-height: 1em;
 }
 
 #photo {
-    width: 2.5%;
+    width: auto;
     height: auto;
 }
 
@@ -61,7 +61,7 @@ ul.topnav li.right {float: right;}
 
 .flex-item-right {
   flex: 50%;
- padding:1px;
+ padding:10px;
    background-color: #751816;   
 
 
