--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ ul.topnav li.right {float: right;}
 .flex-item-right {
   flex: 50%;
  padding:10px;
+    margin: 5%;
    background-color: #751816;   
 
 
