--- a/css/main.css
+++ b/css/main.css
@@ -61,8 +61,8 @@ ul.topnav li.right {float: right;}
 
 .flex-item-right {
   flex: 50%;
- padding:10px;
-    margin: 5%;
+ padding:20px;
+    margin: 0;
    background-color: #751816;   
 
 
