--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ ul.topnav li.right {float: right;}
 .flex-item-right {
   flex: 50%;
  padding:20px;
-
+background: #751816;
 
 }
 @media (max-width: 600px) {
