--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,7 @@ ul.topnav li.right {float: right;}
   flex: 50%;
  padding: 1px;
 background-color: #751816;
+ border: 1px solid gray;
 
 }
 @media (max-width: 600px) {
