--- a/css/main.css
+++ b/css/main.css
@@ -20,10 +20,10 @@ line-height: 1em;
   height: auto;
 }
 
-#photo {
+/*#photo {
     width:2.5%;
     height: auto;
-}
+}*/
 
 ul.topnav {
   list-style-type: none;
