--- a/css/main.css
+++ b/css/main.css
@@ -21,10 +21,9 @@ line-height: 1em;
 }
 
 #photo {
-    width:2.5%;
+    width:100%;
     height: auto;
-    object-position: inherit;
-    object-fit: contain;
+   
 }
 
 ul.topnav {
@@ -60,6 +59,7 @@ ul.topnav li.right {float: right;}
 
 .flex-item-left {
   flex: 40%;
+    padding: 1px;
 }
 
 .flex-item-right {
