--- a/css/main.css
+++ b/css/main.css
@@ -21,9 +21,9 @@ line-height: 1em;
 }
 
 #photo {
-    width:2.5%;
+    width:100%;
     height: auto;
-   
+   object
 }
 
 ul.topnav {
@@ -60,6 +60,7 @@ ul.topnav li.right {float: right;}
 .flex-item-left {
   flex: 40%;
     padding: 1px;
+    fontsize: 100%;
 }
 
 .flex-item-right {
