--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,9 @@ line-height: 1em;
 }
 
 #photo {
-    width:100%;
+    height:100%;
+    max-width: 200px;
+  object-fit: scale-down;
 }
 
 ul.topnav {
