--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ line-height: 1em;
 }
 
 #photo {
-    width: 100%;
+    width: auto%;
     height: auto;
 }
 
@@ -57,14 +57,14 @@ flex-direction: row;
 }
 
 .flex-item-left {
-  flex: 30%;
+  flex: 25%;
   
 }
 
 .flex-item-right {
-  flex: 30%;
+  flex: 25%;
 background-color: #751816;
-    padding: 30px;
+    padding: 5px;
 
 
 }
