--- a/css/main.css
+++ b/css/main.css
@@ -21,9 +21,8 @@ line-height: 1em;
 }
 
 #photo {
-    width: 50%;
+    width: 100%;
     height: auto;
-       object-fit: container;
 
 ul.topnav {
   list-style-type: none;
@@ -52,24 +51,21 @@ ul.topnav li.right {float: right;}
 }
 
 .flex-container {
-  display: grid;
-  grid-template-rows: 50% 50%;
-    grid-template-columns: repeat(12,1fr)
+  display: flexbox;
+  flex-direction: row;
 }
 
 .flex-item-left {
-  grid-row:1;
-  grid-column: 1/span 6; 
-  
+  flex: 50%;
+  padding: 5px;
   
 }
 
 .flex-item-right {
-  grid-row:1;
-   grid-column: 6/span 12; 
+ flex: 50%;
 background-color: #751816;
     padding: 5px;
-    font-size: 50%;
+   
 
 
 }
