--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 /*https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive
 */
-body {margin: 0;}
+/*body {margin: 0;} */
 
 
 .wrapper {
