--- a/css/main.css
+++ b/css/main.css
@@ -2,27 +2,28 @@
 
 /*https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive
 */
-body {margin: 0;} 
-
-
+body {margin: 0;}
 .wrapper {
 max-width: 80%;
     margin: 0 auto;
     padding: 15px 0;
 }
-
 br {
 line-height: 1em;    
 }
-
 .logo {
   width: 20%;
   height: auto;
 }
 
 #photo {
-    width: auto;
+    width:2.5%;
+    width:100%;
     height: auto;
+    object-position: inherit;
+    object-fit: contain;
+
+}
 
 ul.topnav {
   list-style-type: none;
@@ -31,9 +32,7 @@ ul.topnav {
   overflow: hidden;
   background-color: #101010;
 }
-
 ul.topnav li {float: left;}
-
 ul.topnav li a {
   display: block;
   color: white;
@@ -41,38 +40,29 @@ ul.topnav li a {
   padding: 14px 16px;
   text-decoration: none;
 }
-
 ul.topnav li a:hover:not(.active) {background-color:#BA2623;}
-
 ul.topnav li a.active {background-color: #DE741D;}
-
 ul.topnav li.right {float: right;}
-
 }
-
 .flex-container {
-  display: flexbox;
+  display: flex;
   flex-direction: row;
 }
 
 .flex-item-left {
-  flex: 50%;
-  
+  flex: 40%;
+    padding: 1px;
 }
 
 .flex-item-right {
- flex: 50%;
+  flex: 40%;
+ padding: 1px;
 background-color: #751816;
-    padding: 5px;
-   
-
-
 }
 @media (max-width: 600px) {
   ul.topnav li.right, 
   ul.topnav li {float: none;}
 }
-
  .flex-container {
     flex-direction: column;
   }
