--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,11 @@ line-height: 1em;
 }
 
 .homeless {
-    width:100%;
+    width:10%;
     height: auto;
+      overflow: hidden;
+      margin: 0;
+  padding: 0;
     
 
 }
