--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,7 @@ line-height: 1em;
 .homeless {
     width:10%;
     height: auto;
-      overflow: hidden;
-      margin: 0;
-  padding: 0;
-    
+      overflow: auto;
 
 }
 
