--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,8 @@ line-height: 1em;
   height: auto;
 }
 
-#homeless {
-    width:10%;
+#photo {
+    width:100%;
     height: auto;
       overflow: auto;
 
