--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,8 @@ line-height: 1em;
 }
 
 #photo {
-    width:100%;
-    height: auto;
+    width:auto;
+    height: 100%;
     object-fit: contain;
 
 }
