--- a/css/main.css
+++ b/css/main.css
@@ -49,18 +49,19 @@ ul.topnav li.right {float: right;}
 
 .flex-item-left {
   flex: 50%;
-    padding: 30px;
+   padding: 10px;
+    
 }
 
 .flex-item-right {
   flex: 50%;
- padding: 30px;
+ padding: 10px;
 background-color: #751816;
     
 @media (max-width: 600px) {
       .flex-container {
     flex-direction: column;
-          
+    }
   ul.topnav li.right, 
   ul.topnav li {float: none;}
 
