--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ ul.topnav li.right {float: right;}
   flex: 50%;
  padding: 10px;
 background-color: #751816;
-    
+}
 @media (max-width: 600px) {
       .flex-container {
     flex-direction: column;
