--- a/css/main.css
+++ b/css/main.css
@@ -47,12 +47,12 @@ ul.topnav li.right {float: right;}
   box-sizing: border-box;
 }
 
-
 /* Create two equal columns that floats next to each other */
 .column {
   float: left;
   width: 50%;
   padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
@@ -60,6 +60,7 @@ ul.topnav li.right {float: right;}
   content: "";
   display: table;
   clear: both;
+
 
     /*https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_two_columns */
 }
