--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,8 @@ ul.topnav li.right {float: right;}
   float: left;
   width: 50%;
   padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
+    align-items: center;
+  justify-content: center;
 }
 
 /* Clear floats after the columns */
