--- a/css/main.css
+++ b/css/main.css
@@ -18,10 +18,8 @@ line-height: 1em;
 
 
 .photo {
-   width: 20%;
-   
-   height: auto; /* maintain aspect ratio*/
-   margin: auto; /*optional centering of image*/
+   background-image:url('');
+    background-size:cover; 
 }
 
 
