--- a/css/main.css
+++ b/css/main.css
@@ -57,10 +57,16 @@ ul.topnav li.right {float: right;}
 }
 
 .card {
-    background:f57f20;
+    background-color:white;
+    border: 3px;
+    border-color: white;
+    padding:0px;
+    margin:0px;
 }
 
 .card-img-full {
+    position:inherit
   width: 200px;
   height: 200px;
 }
+
