--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,12 @@
 
 
-/*https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive
-*/
-body {margin: 0;}
-.wrapper {
-max-width: 80%;
-    margin: 0 auto;
-    padding: 15px 0;
-}
-br {
-line-height: 1em;    
-}
+/* Main */
+
+
 .logo {
   width: 20%;
   height: auto;
 }
-
-
-.photo {
-   background-image:url('css/images/image2vector.svg');
-    
-        background-size:cover; 
-}
-
-
 
 
 ul.topnav {
@@ -31,9 +14,11 @@ ul.topnav {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #101010;
+  background-color: #003049;
 }
+
 ul.topnav li {float: left;}
+
 ul.topnav li a {
   display: block;
   color: white;
@@ -41,32 +26,219 @@ ul.topnav li a {
   padding: 14px 16px;
   text-decoration: none;
 }
-ul.topnav li a:hover:not(.active) {background-color:#BA2623;}
-ul.topnav li a.active {background-color: #DE741D;}
+
+ul.topnav li a:hover:not(.active) {background-color: #D62A28 ;}
+
+ul.topnav li a.active {background-color: #F57F20;}
+
 ul.topnav li.right {float: right;}
+
 }
 
-
-    /*https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_two_columns */
-
-@media (max-width: 600px) {
-  ul.topnav li.right, 
-  ul.topnav li {float: none;}
+html {
+  font-size: 10px;
 }
+  
+
+body {
+  font-size: calc(10px + (18 - 9) * ((100vw - 600px) / (1600 - 600)));
+  line-height: 1.5em;
+}
+
+.homeless{
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+ /* padding: 0%;
+  margin: 0%;
+  border: 0%; */ 
+}
+
+img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    display: block;
+
+   /* padding: 0%;
+    margin: 0%;
+    border: 0%; */
+  }
+
+
+
+/*https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive*/
+
+
+
+ @media (min-width:601px) {
+  /*Anything above 600 pixels like tablet or desktop*/
+   
+
+  /*Desktop Grid*/
+  
+
+  .row{
+    background-color: white;
+    height: auto;
+  /*  border: 1px dotted black;
+    padding: 0%; */
+
+
+
+  }
+
+
+
+   #container{
+    width:  90%;
+    height: auto;
+    margin: 0 auto;
+   
+    display: grid;
+    /*grid-template-rows: 4em 10em 4em; */
+    grid-template-rows: 22% 3.5% 35% 30% 15%;
+    grid-template-columns: repeat(11, 1fr);
+    /*gap: 10px 0; */
+    
+}
+  
+#banner{
+  grid-row:1;
+  grid-column: 1/ span 12;
+  padding: 30px;
+
+
+    
+}
+
+#nav{
+grid-row: 2;
+grid-column: 1/span 12;
+
+}
+
+#photo{
+grid-row: 3;
+grid-column: 1/span 5;
+padding: 10%;
+}
+
+#stats{
+grid-row: 3;
+grid-column: 6/span 12;
+padding: 10%;
+}
+
+#about{
+  grid-row: 4;
+  grid-column: 1/span 12;
+  padding: 10%;
  
 }
 
-.card {
-    background-color:white;
-    border: 3px;
-    border-color: white;
-    padding:0px;
-    margin:0px;
+
+#footer{
+  grid-row: 5;
+  grid-column: 1/span 12;
+padding: 25px;
+padding-left: 10%;
+
 }
 
-.card-img-full {
-    position:inherit
-  width: 200px;
-  height: 200px;
+
+}
+
+@media screen and (max-width: 600px) {
+  ul.topnav li.right, 
+  ul.topnav li {float: none;}
+
+  .homeless{
+  max-width: 125%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+ html {
+    font-size: 22px;
+  }
+
+body {
+  font-size: calc(22px + (22 - 16) * ((100vw - 600px) / (1600 - 600)));
+}
+
+#source{
+  font-size: 3vw;
+
+}
+#container{
+    display:grid;
+    grid-template-rows: 12% 15% 15% 25% 30% 15%;
+  }
+
+.header{
+  font-size: 4vw;
+margin-left: 20%;
+margin-right: 20%;
+align-content: center;
+} 
+
+.logo{
+  width: 50%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+#banner{
+  grid-row:1;
+
+
+    
+}
+
+#nav{
+grid-row: 2;
+
+}
+
+#photo{
+grid-row: 3;
+margin-left: auto;
+margin-right: auto;
+}
+
+#stats{
+grid-row: 4;
+padding: 5px;
+}
+
+#about{
+  grid-row: 5;
+  padding-top: 10%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+
+#footer{
+  grid-row: 6;
+padding-top: 20%;
+padding-left: 5%;
+padding-right: 5%;
+font-size: 4.5vw;
+
+}
+
+
+
+
+
+
+  
 }
 
